[package]
name = "tim"
version = "0.1.0"
authors = ["Mika Lehtinen <mikkalle@student.jyu.fi>"]
edition = "2018"

[dependencies]
actix = "0.7.4"
askama = "0.7.1"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
failure = "0.1.2"
log = "0.4.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
simple_logger = "1.0.1"
yaml-rust = "0.4.2"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", features = ["tokio-compat"] }

[dependencies.actix-web]
version = "0.7.8"
default-features = false
features = ["brotli", "flate2-c"]

[dependencies.diesel]
version = "1.3.3"
default-features = false
features = ["postgres", "r2d2", "32-column-tables"]

[build-dependencies]
askama = "0.7.1"
