[package]
name = "tim_rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tim_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
pythonize = "0.19.0"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"