name:                 AsciiMath
version:              0.1.0.0
synopsis:             Compiler from ASCIIMath to LaTeX
description:          AsciiMath is a Haskell library for converting from
                      asciimath to LaTeX. See README.md for further information.
homepage:             https://github.com/Kerl13/AsciiMath
license:              MIT
license-file:         LICENSE
author:               Martin Pépin
maintainer:           kerl@wkerl.me
-- copyright:
-- category:
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

library
  build-depends:        containers, array, base >=4.6 && <5
  other-modules:        Parser, Lexer, Ast, TeXWriter, Passes, Exception
  exposed-modules:      AsciiMath
  build-tools:          happy, alex
  hs-source-dirs:       src/lib
  default-language:     Haskell2010
  ghc-options:          -Wall
  other-extensions:     DeriveDataTypeable

executable asciimath
  main-is:              CommandLine.hs
  build-depends:        AsciiMath, base
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  hs-source-dirs:       src/bin

executable pandoc-asciimath
  main-is:              Pandoc-AsciiMath.hs
  build-depends:        AsciiMath, pandoc-types, base
  ghc-options:          -Wall -threaded
  default-language:     Haskell2010
  hs-source-dirs:       src/bin

test-suite asciimath-test
  type:                 exitcode-stdio-1.0
  main-is:              TestAsciiMath.hs
  other-modules:        TestLib
  hs-source-dirs:       tests
  build-depends:        base, AsciiMath, HUnit
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/Kerl13/AsciiMath
