[package]
name = "tim"
version = "0.1.0"
authors = ["Mika Lehtinen <mikkalle@student.jyu.fi>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
askama = "0.8.0"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
failure = "0.1.5"
log = "0.4.6"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
simple_logger = "1.3.0"
yaml-rust = "0.4.3"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly", "compat"] }
tera = { git = "https://gitlab.com/tim-jyu/tera" }
config = "0.9.3"
rayon = "1.1.0"
chrono = { version = "0.4.6", features = ["serde"] }
indexmap = "1.0.2"
nom = "5.0.0"

[dependencies.actix-web]
version = "0.7.19"
default-features = false
features = ["brotli", "flate2-c"]

[dependencies.diesel]
version = "1.4.2"
default-features = false
features = ["postgres", "r2d2", "32-column-tables"]
