[package]
name = "tim-doc-server"
version = "0.1.0"
authors = ["Mika Lehtinen <mikkalle@student.jyu.fi>"]
edition = "2018"

[dependencies]
askama = "0.10.5"
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
log = "0.4.14"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
yaml-rust = "0.4.5"
tera = "1.12.1"
config = "0.11.0"
rayon = "1.5.1"
chrono = { version = "0.4.19", features = ["serde"] }
indexmap = { version = "1.7.0", features = ["rayon"] }
thiserror = "1.0.26"
actix-web = "3.3.2"
anyhow = "1.0.43"
tim-core = {path = "../tim-core"}

[dependencies.diesel]
version = "1.4.7"
default-features = false
features = ["postgres", "r2d2", "32-column-tables"]
